# group-project

./: .gitignore  components.json  data_cleaning.ipynb  docker-compose.yaml  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
backend/: Dockerfile  main.py  pyproject.toml  run.py
backend/app/: .env  main.py
backend/app/api/: router.py
backend/app/api/classes/: Stock.py
backend/app/api/endpoints/: csv_files.py
backend/app/api/utility/: llm_recomendation.py  metric_computation.py  metrics_computation.py  raw_data_extraction.py  sector_yearly_average.py  test_utility_function.py  yearly_data_average.py
backend/data/: A.csv  AAALY.csv  AAC.csv  AACAY.csv  AAL.csv  AAME.csv  AAOI.csv  AAON.csv  AAP.csv  AAPL.csv  AAT.csv  AAWW.csv  AB.csv  ABBV.csv  ABC.csv  ABCB.csv  ABG.csv  ABLT.csv  ABM.csv  ABMD.csv  ABR.csv  ABT.csv  ACAD.csv  ACCYY.csv  ACDVF.csv  ACET.csv  ACFN.csv  ACGBY.csv  ACGL.csv  ACHC.csv  ACHN.csv  ACIW.csv  ACLS.csv  ACN.csv  ACNB.csv  ACOR.csv  ACP.csv  ACRE.csv  ACRX.csv  ACST.csv  (+3094 more)
backend/processed_data/: sector_yearly_average.json  stocks_details.csv  yearly_average.csv
components/: AppNavbar.tsx  Dashboard.tsx  app-sidebar.tsx
components/components/: AppNavbar.tsx  ColorModeIconDropdown.tsx  Header.tsx  MenuContent.tsx  SideMenu.tsx  SideMenuMobile.tsx
components/dashboard/: stocksearchbar.tsx
components/rawdata/: Filterbuttons.tsx  stockdata.tsx  stocks.tsx
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  (+1 more)
lib/: api.ts  axios.ts  types.ts
(+41 files in other folders)
